change button place to price

--- a/index.html
+++ b/index.html
@@ -292,6 +292,8 @@
 		<div class="chep">
 			<h1 data-ix="scroll-1" class="h3 spec">Хорошая работа стоит денег</h1>
 			<p data-ix="scroll-1" class="_25-effra">Наша стоит 2 000 $ в месяц. Работаем по предоплате 50% за первый месяц. Всё обсудим до старта.</p>
+			<p data-ix="scroll-1" class="_25-effra">Сейчас самое время задать друг другу вопросы и&nbsp;запланировать встречу или созвон. В&nbsp;течение недели накидаем черновой план действий.</p>
+			<a href="https://telegram.me/mrmixsun" data-ix="button-scroll" target="_blank" class="telegram-button w-button">Напишите в Телеграм</a>		
 		</div>
 		<!--div class="price-block">
 			<div class="fake-box">
