hide contact-us

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 		<div class="chep">
 			<h1 data-ix="scroll-1" class="h3 spec">Хорошая работа стоит денег</h1>
 			<p data-ix="scroll-1" class="_25-effra">Наша стоит 2 000 $ в месяц. Работаем по предоплате 50% за первый месяц. Всё обсудим до старта.</p>
-			<p data-ix="scroll-1" class="_25-effra">Сейчас самое время задать друг другу вопросы и&nbsp;запланировать встречу или созвон. В&nbsp;течение недели накидаем черновой план действий.</p>
+			<p data-ix="scroll-1" class="_25-effra" style="margin-top: 30px;">Сейчас самое время задать друг другу вопросы и&nbsp;запланировать встречу или созвон. В&nbsp;течение недели накидаем черновой план действий.</p>
 			<a href="https://telegram.me/mrmixsun" data-ix="button-scroll" target="_blank" class="telegram-button w-button">Напишите в Телеграм</a>		
 		</div>
 		<!--div class="price-block">
@@ -331,10 +331,10 @@
 		</div-->
 	</section>
 
-	<section id="contact-us" class="contact-us">
+	<!--section id="contact-us" class="contact-us">
 		<p data-ix="scroll-1" class="_25-effra">Сейчас самое время задать друг другу вопросы и&nbsp;запланировать встречу или созвон. В&nbsp;течение недели накидаем черновой план действий.</p>
 		<a href="https://telegram.me/mrmixsun" data-ix="button-scroll" target="_blank" class="telegram-button w-button">Напишите в Телеграм</a>
-	</section>
+	</section-->
 
 	<!--div class="footer-section">
 		<div class="footer-block">
