--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				</div>
 				<div data-ix="scroll-2" class="why-mobile w-clearfix">
 					<h4 class="table-element-h4">По части вовлечённости</h4>
-					<p class="p"><b>Онбординг</b><br/>разрабатываем программу адаптации новичков к&nbsp;культурным и&nbsp;процессным устоям.</p> 
+					<p class="p"><b>Онбординг:</b><br/>разрабатываем программу адаптации новичков к&nbsp;культурным и&nbsp;процессным устоям.</p> 
 					<p class="p" style="margin-top: 30px;"><b>Программы профессионального роста:</b><br/>помогаем формализовать дорожные карты по&nbsp;техническим навыкам (hard skills) и&nbsp;работе с&nbsp;людьми (soft skills).</p>
 					<p class="p" style="margin-top: 30px;"><b>Обучение в формате Employee-to-Employee:</b><br/>выстраиваем процесс расшаривания лучших практик и&nbsp;обучения одних коллег другими.</p>
 					<p class="p" style="margin-top: 30px;"><b>Внутренние мероприятия:</b><br/>организуем мероприятия, через которые транслируются ценности компании и&nbsp;раскрывается потенциал сотрудников; например, хакатоны.</p> 
