change content to new_

--- a/index_28_03.html
+++ b/index_28_03.html
@@ -3,11 +3,11 @@
 <html>
 <head>
 	<meta charset="utf-8"/>
-	<title>Долгушев и Сторожилов — агентство HR-маркетинга</title>
-	<meta content="Помогаем запустить и наладить HR-маркетинг. Поможем нанимать эффективнее и проще." name="description"/>
+	<title>Агентство HR маркетинга Долгушева и Сторожилова</title>
+	<meta content="Помогаем хорошим компаниям наладить HR маркетинг. Позаботимся о том, чтобы нанимать эффективнее." name="description"/>
 	<meta content="summary" name="twitter:card"/>
-	<meta content="Долгушев и Сторожилов — агентство HR-маркетинга" property="og:title"/>
-	<meta content="Помогаем запустить и наладить HR-маркетинг. Поможем нанимать эффективнее и проще." property="og:description"/>
+	<meta content="Уютное агентство HR маркетинга Долгушева и Сторожилова" property="og:title"/>
+	<meta content="Помогаем хорошим компаниям наладить HR маркетинг. Позаботимся о том, чтобы нанимать эффективнее." property="og:description"/>
 	<meta content="https://mrmixsun.github.io/agency/dist/opengraph.jpg" property="og:image"/>
 	<meta content="width=device-width, initial-scale=1" name="viewport"/>
 	<!-- мета и опенграф ↑ -->
@@ -34,19 +34,18 @@
 		<div id="utp-screen" class="utp-screen">
 			<div class="top-box">
 				<div class="top-wrapper" style="max-width: 90%;">
-					<h1 id="h1" data-ix="appear-1" class="h1 right" style="font-family: 'Montserrat', sans-serif; font-weight: 700;">Помогаем запустить и&nbsp;наладить HR-маркетинг</h1>
-					<p data-ix="appear-2" class="simple-text" style="margin-top:80px;">Раньше вам достаточно было иметь в компании сильную экспертизу, интересные проекты и базовые точки входа (сайт, вакансии на внешних площадках). И люди шли к вам работать.</p> 
-					<p data-ix="appear-2" class="simple-text">Сейчас приходится заниматься активным хантингом. Время закрытия вакансии – растёт. Запросы и зарплаты кандидатов – растут. А вот уровень кандидатов растёт не в каждом случае. Непонятно, где искать классных специалистов. Классные специалисты не ищут работу.</p> 
-					<p data-ix="appear-2" class="simple-text">Сегодня для найма компаниям нужен маркетинг в области HR и поддержка этого маркетинга со стороны сотрудников. Это то, чем мы занимаемся.</p> 
+					<h1 id="h1" data-ix="appear-1" class="h1 right" style="font-family: 'Montserrat', sans-serif; font-weight: 700;">Помогаем нанимать проще&nbsp;и&nbsp;эффективнее</h1>
+					<p data-ix="appear-2" class="simple-text" style="margin-top:80px;">Сегодня для найма компаниям нужен маркетинг, направленный на потенциальных сотрудников. Компаниям нужна заметность.</p> 
+					<p data-ix="appear-2" class="simple-text">А ещё нужна поддержка этого маркетинга со стороны действующих сотрудников. Компаниям нужна вовлечённость.</p> 
+					<p data-ix="appear-2" class="simple-text">Это как раз то, с чем мы можем помочь.</p> 
 				</div>
-			</div>		
-
-			<div data-ix="appear-4" class="top-box">
+			</div>			
+			<!--div data-ix="appear-4" class="top-box">
 				<div class="fn1">
 					<div data-ix="circle-scale" class="round w-clearfix">
 						<div class="count">1</div>
 					</div>
-				<p class="utp-feature-txt">Разрабатываем стратегию и запускаем кампании для найма</p>
+				<p class="utp-feature-txt">Разрабатываем стратегию и запускаем маркетинговые кампании для найма</p>
 				</div>
 				<div class="fn1">
 					<div data-ix="circle-scale" class="round w-clearfix">
@@ -58,34 +57,52 @@
 					<div data-ix="circle-scale" class="round w-clearfix">
 						<div class="count">3</div>
 					</div>
-					<p class="utp-feature-txt">Настраиваем метрики эффективности HR-маркетинга для внешних и внутренних активностей</p>
+					<p class="utp-feature-txt">Считаем и контролируем эффективность</p>
 				</div>
-			</div>
-			<div class="top-box">
-				<div class="top-wrapper" style="max-width: 90%;"> 
-					<p data-ix="appear-2" class="simple-text">Для этой деятельности есть разные названия. Техно-маркетинг, техно-пиар, Developer Relations. Нам нравится вымышленное слово “эйчаркетинг” – HRketing. Human Relations & Marketing. Или Human-Related Marketing. Про людей, взаимоотношения и маркетинг. В такой последовательности.</p> 
-				</div>
-			</div>							
+			</div-->			
 		</div>
 	</div>
 
 	<section id="why-section" class="why-section" style="padding-top: 100px;">
 		<div class="why-block">
 			<div class="h3-wrapper">
-				<h3 data-ix="scroll-1" class="h3">Что именно мы делаем:</h3>
+				<h3 data-ix="scroll-1" class="h3">Что именно мы предлагаем:</h3>
 			</div>
 			<div class="cards-block">
 				<div data-ix="scroll-1" class="why-mobile">
-					<h4 class="table-element-h4">Поможем сформулировать ценностное предложение работодателя</h4>
-					<p class="p">Это называется Employee Value Proposition (EVP). Это смысловое ядро эйчаркетинга: чем вы отличаетесь от других работодателей на рынке, почему и в каких случаях нужно идти работать к вам. Что именно человек получит в обмен на свои навыки.</p>
-					<h4 class="table-element-h4">Настроим процесс участия во внешних мероприятиях</h4>
-					<p class="p">Сегодня существуют разные митапы и конференции, на которых можно и нужно рассказывать компании. Где-то в качестве участника, где-то докладчика, где-то партнёра. А иногда нужно организовать своё собственное тематическое мероприятие, которое станет центром притяжения для сообщества. Мы помогаем привязать планы по внешним мероприятиям к вашим целям и экспертизе. А ещё помогаем использовать лучшие практики подготовки. </p>
+					<h4 class="table-element-h4">По части заметности</h4>
+					<p class="p"><b>Стратегия и планирование:</b>
+						<ul>
+							<li>выявляем культурные, процессные и технологические особенности компании, которые помогают правильно позиционировать компанию на рынке;</li> 
+							<li>составляем профиль ваших идеальных кандидатов: что их отличает, где их искать, как достучаться;</li> 
+							<li>привязываем активности по эйчаркетингу к бизнес-целям компании и мотивации сотрудников.</li>
+						</ul>
+						</p>
+					<p class="p" style="margin-top: 30px;"><b>Контент:</b>
+						<ul>
+							<li>настраиваем процесс сбора безбуллшитовых технических историй внутри компании (они у вас есть, поверьте);</li> 
+							<li>редактируем и помогаем создавать контент — статьи, выступления, коммуникации;</li> 
+							<li>учим технарей рассказывать интересно, а маркетологов - технически грамотно;</li> 
+							<li>создаём внутренние гайдлайны по контенту.</li>
+						</ul>
+					</p> 
+					<p class="p" style="margin-top: 30px;"><b>Профильные мероприятия:</b> 
+						<ul>
+							<li>подбираем митапы и конференции, в которых сотрудники могут участвовать как докладчики-активисты и слушатели-партизаны;</li>
+							<li>помогаем сотрудникам готовить яркие доклады;</li> 
+							<li>планируем ваши партнёрские активности с организаторами мероприятий;</li> 
+							<li>создаём и развиваем ваши собственные мероприятия.</li>
+						</ul>
+					</p>
 				</div>
 				<div data-ix="scroll-2" class="why-mobile w-clearfix">
-					<h4 class="table-element-h4">Скорректируем контент-план</h4>
-					<p class="p">Статьи для внешних ресурсов, выступления на внешних мероприятиях. Мы показываем, откуда брать истории и как их преподносить с максимальным эффектом. Делать это часто и с пользой для аудитории, и при этом закладывать в каждую историю порцию EVP. А ещё — что писать в точках входа, на сайте и в описаниях вакансий.</p>
-					<h4 class="table-element-h4">Запустим внутренние мероприятия</h4>
-					<p class="p">Книжные клубы, питчинг бизнес-идей от инженеров, хакатоны. Мы помогаем запустить внутри компании мероприятия, которые помогут транслировать ценности компании. А ещё вовлекать людей во внутренние инициативы. Например, в эйчаркетинг.</p>
+					<h4 class="table-element-h4">По части вовлечённости</h4>
+					<p class="p"><b>Онбординг:</b><br/>разрабатываем программу адаптации новичков к&nbsp;культурным и&nbsp;процессным устоям.</p> 
+					<p class="p" style="margin-top: 30px;"><b>Программы профессионального роста:</b><br/>помогаем формализовать дорожные карты по&nbsp;техническим навыкам (hard skills) и&nbsp;работе с&nbsp;людьми (soft skills).</p>
+					<p class="p" style="margin-top: 30px;"><b>Обучение в формате Employee-to-Employee:</b><br/>выстраиваем процесс расшаривания лучших практик и&nbsp;обучения одних коллег другими.</p>
+					<p class="p" style="margin-top: 30px;"><b>Внутренние мероприятия:</b><br/>организуем мероприятия, через которые транслируются ценности компании и&nbsp;раскрывается потенциал сотрудников; например, хакатоны.</p> 
+					<p class="p" style="margin-top: 30px;"><b>Сообщества:</b><br/>создаём условия, при которых люди могут найти в&nbsp;компании единомышленников.</p>
+					<p class="p" style="margin-top: 30px;"><b>Внутренние каналы коммуникации:</b><br/>настраиваем процессы общения между руководством и&nbsp;сотрудниками: чтобы первые лучше представляли настроения внутри компании, а&nbsp;вторые знали, что к&nbsp;ним прислушиваются и&nbsp;их&nbsp;мнение способно что-то изменить.</p>
 				</div>			
 			</div>
 		</div>
