--- a/index.html
+++ b/index.html
@@ -91,40 +91,21 @@
 		</div>
 	</section>
 
-	<!--section id="why-section" class="why-section" style="padding-top: 100px;">
+	<section id="why-section" class="why-section" style="padding-top: 100px;">
 		<div class="why-block">
 			<div class="h3-wrapper">
-				<h3 data-ix="scroll-1" class="h3">Мы пригодимся, если:</h3>
+				<h3 data-ix="scroll-1" class="h3">FAQ</h3>
 			</div>
-			<div class="cards-block">
-				<div data-ix="scroll-1" class="why-mobile">
-					<h4 class="table-element-h4">Нанимаете много и на регулярной основе</h4>
-					<p class="p">Ваш бизнес развивается. У вас то и дело возникает потребность нанимать новых сотрудников, в связи с ростом числа клиентов, изменением масштаба или специфики проектов, или всего этого вместе. Вы хотите сделать найм более предсказуемым и удобным. А адаптацию новых сотрудников более эффективной.</p>
-				</div>
-				<div data-ix="scroll-2" class="why-mobile w-clearfix">
-					<h4 class="table-element-h4">Для вас критично качество найма</h4>
-					<p class="p">Открытые вакансии могут возникать у вас не сильно часто. Но в те моменты, когда вакансии есть, вам важно тратить меньше времени на нахождение подходящих кандидатов. А ещё вам важно находить соискателей, которые будут лучше вливаться, будут близкими по духу для команды. </p>
-				</div>
-				<div data-ix="scroll-1" class="why-mobile w-clearfix">
-					<h4 class="table-element-h4">Хотите раскрыть потенциал уже собранной команды</h4>
-					<p class="p">Вы уже наняли маркетолога и видите большой потенциал, но для рывка нужен кто-то вроде маркетинг-директора.</p>
-				</div>
-				<div data-ix="scroll-2" class="why-mobile w-clearfix">
-					<h4 class="table-element-h4">Уже делаете эйчаркетинг</h4>
-					<p class="p">Ваши сотрудники выступают на конференциях и пишут статьи. Возможно, у вас есть люди, которые занимаются организацией и поддержанием процессов эйчаркетинга. Вы видите в этом направлении большой потенциал, но ощущаете, что для качественного рывка нужен импульс.</p>
-				</div>
+			<div class="cards-block">				
 				<div data-ix="scroll-1" class="useless why-mobile">
-					<h4 class="table-element-h4">Мы бесполезны, когда:</h4>
-					<ul class="list">
-						<li class="list-item">нужно разовое мероприятие — закрыть горящую вакансию и больше ничего</li>
-						<li class="list-item">нужен аудит, инсайты из которого некому будет делать руками</li>
-						<li class="list-item">ваша бизнес-модель не предполагает профессионального роста сотрудников</li>
-						<li>вы любите микроменеджмент и не готовы доверить нам тактику по части эйчаркетинга</li>
-					</ul>
+					<h4 class="table-element-h4">Разве можно делать HR-маркетинг извне компании? Нужно ведь учитывать ценности, специфику, задачи. Их снаружи не увидеть.</h4>
+					<p class="p">Всё так. Поэтому в основе нашего подхода — формирование смыслового ядра (EVP) и настройка процесса вовлечения участников из числа сотрудников. Наша цель — вместе с вами выстроить автономный процесс, который сможет успешно работать без нашего участия. Чтобы мы могли пойти запускать эйчаркетинг в других компаниях и в итоге принести его в каждую.</p>
+					<h4 class="table-element-h4">Как именно будет происходить взаимодействие с вами?</h4>
+					<p class="p">Мы работаем удалённо. В начале проекта проводим несколько установочных встреч или созвонов. Потом созваниваемся с вами еженедельно, чтобы обсудить результаты недели и наметить планы на следующую. Наши инструменты: гугл-таблицы для сводной информации, Трелло для работы с задачами, Слак для командных коммуникаций.</p>
 				</div>
 			</div>
 		</div>
-	</section-->
+	</section>
 
 	<!--section id="what" class="how-it-works">
 		<div class="row">
@@ -217,18 +198,18 @@
 
 	<div class="who">
 		<div id="who" class="dima-block">
+			<h1 data-ix="scroll-1" class="h3 spec">Кто эти граждане?</h1>
 			<div class="info-box">
 				<a target="_blank" href="https://www.facebook.com/aleksey.dolgushev" class="round-link w-inline-block"><img src="https://mrmixsun.github.io/agency/dist/alyoshka.png" data-ix="scroll-1" srcset="https://mrmixsun.github.io/agency/dist/alyoshka.png 500w, https://mrmixsun.github.io/agency/dist/alyoshka.png 930w" sizes="(max-width: 479px) 80vw, (max-width: 767px) 70vw, (max-width: 991px) 320px, 410px"/></a>
-				<h4 data-ix="scroll-1" class="h3 _2">Лёша Долгушев</h4>
-				<p data-ix="scroll-1" class="caps">стратегия и планирование</p>
-				<p data-ix="scroll-1" class="bio-txt">Программировал машинное зрение, делал онлайн и оффлайн маркетинг, управлял проектами, управлял продуктами, организовывал CodeFest.</p>
+				<h4 data-ix="scroll-1" class="h3 _2">Алексей Долгушев</h4>
+				<!--p data-ix="scroll-1" class="caps">стратегия и планирование</p-->
+				<p data-ix="scroll-1" class="bio-txt">Программировал машинное зрение, делал разный маркетинг, управлял проектами и продуктами, организовывал CodeFest. Развивает локальные IT-сообщества в России.</p>
 			</div>
-
 			<div class="info-box">
 				<a target="_blank" href="https://www.facebook.com/mihail.storozhilov" class="round-link w-inline-block"><img src="https://mrmixsun.github.io/agency/dist/mishanya.png" data-ix="scroll-1" srcset="https://mrmixsun.github.io/agency/dist/mishanya.png 500w, https://mrmixsun.github.io/agency/dist/mishanya.png 930w" sizes="(max-width: 479px) 80vw, (max-width: 767px) 70vw, (max-width: 991px) 320px, 410px"/></a>
-				<h4 data-ix="scroll-1" class="h3 _2">Мишаня Сторожилов</h4>
-				<p data-ix="scroll-1" class="caps">тактика и реализация</p>
-				<p data-ix="scroll-1" class="bio-txt">Был фронтендером, PM, специалистом по&nbsp;техномаркетингу в 2ГИС, организовывал Devday, CodeFest, FrontFest и&nbsp;конференцию Груша.</p>
+				<h4 data-ix="scroll-1" class="h3 _2">Михаил Сторожилов</h4>
+				<!--p data-ix="scroll-1" class="caps">тактика и реализация</p-->
+				<p data-ix="scroll-1" class="bio-txt">4 года занимался HR-маркетингом в 2ГИС. Организовывал Devday, CodeFest, FrontFest и&nbsp;конференцию Груша. Строит дом и воспитывает двух дочерей.</p>
 			</div>
 		</div>
 	</div>
@@ -273,10 +254,10 @@
 
 	<section id="price-section" class="price-section">
 		<div class="chep">
-			<h1 data-ix="scroll-1" class="h3 spec">Хорошая работа стоит денег</h1>
-			<p data-ix="scroll-1" class="_25-effra">Наша стоит 2 000 $ в месяц. Работаем по предоплате 50% за первый месяц. Всё обсудим до старта.</p>
-			<p data-ix="scroll-1" class="_25-effra" style="margin-top: 30px;">Сейчас самое время задать друг другу вопросы и&nbsp;запланировать встречу или созвон. В&nbsp;течение недели накидаем черновой план действий.</p>
-			<a href="https://telegram.me/mrmixsun" data-ix="button-scroll" target="_blank" class="telegram-button w-button">Напишите в Телеграм</a>		
+			<h1 data-ix="scroll-1" class="h3 spec">Что дальше?</h1>
+			<!--p data-ix="scroll-1" class="_25-effra">Наша стоит 2 000 $ в месяц. Работаем по предоплате 50% за первый месяц. Всё обсудим до старта.</p-->
+			<p data-ix="scroll-1" class="_25-effra" style="margin-top: 30px;">Сейчас самое время задать друг другу вопросы и&nbsp;запланировать встречу или созвон. Черновой план действий составим в течение недели.</p>
+			<a href="https://telegram.me/adolgushev" data-ix="button-scroll" target="_blank" class="telegram-button w-button">Напишите в Телеграм</a>		
 		</div>
 		<!--div class="price-block">
 			<div class="fake-box">
