fix pitch height

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 
 <body class="body">	
-	<div class="top-block" style="margin-top:100px; min-height: 400px;>
+	<div class="top-block" style="margin-top:100px; >
 		<div id="utp-screen" class="utp-screen">
 			<div class="top-box">
 				<div class="top-wrapper" style="max-width: 90%;">
@@ -58,7 +58,7 @@
 					<div data-ix="circle-scale" class="round w-clearfix">
 						<div class="count">3</div>
 					</div>
-					<p class="utp-feature-txt">Настраиваем метрики эффективности HR-маркетинга для внешних и внутренних активностей</p>
+					<p class="utp-feature-txt">Настраиваем метрики эффективности HR-маркетинга</p>
 				</div>
 			</div>
 			<div class="top-box">
