--- a/index.html
+++ b/index.html
@@ -35,13 +35,12 @@
 			<div class="top-box">
 				<div class="top-wrapper" style="max-width: 90%;">
 					<h1 id="h1" data-ix="appear-1" class="h1 right" style="font-family: 'Montserrat', sans-serif; font-weight: 700;">Помогаем запустить и&nbsp;наладить HR-маркетинг</h1>
-					<p data-ix="appear-2" class="simple-text" style="margin-top:80px;">Раньше вам достаточно было иметь в компании сильную экспертизу, интересные проекты и базовые точки входа (сайт, вакансии на внешних площадках). И люди шли к вам работать.</p> 
+					<p data-ix="appear-2" class="simple-text" style="margin-top:40px;">Раньше вам достаточно было иметь в компании сильную экспертизу, интересные проекты и базовые точки входа (сайт, вакансии на внешних площадках). И люди шли к вам работать.</p> 
 					<p data-ix="appear-2" class="simple-text">Сейчас приходится заниматься активным хантингом. Время закрытия вакансии – растёт. Запросы и зарплаты кандидатов – растут. А вот уровень кандидатов растёт не в каждом случае. Непонятно, где искать классных специалистов. Классные специалисты не ищут работу.</p> 
 					<p data-ix="appear-2" class="simple-text">Сегодня для найма компаниям нужен маркетинг в области HR и поддержка этого маркетинга со стороны сотрудников. Это то, чем мы занимаемся.</p> 
 				</div>
 			</div>		
-
-			<div data-ix="appear-4" class="top-box">
+			<div data-ix="appear-4" class="top-box" style="margin-bottom: 40px;">
 				<div class="fn1">
 					<div data-ix="circle-scale" class="round w-clearfix">
 						<div class="count">1</div>
@@ -76,8 +75,8 @@
 			</div>
 			<div class="cards-block">
 				<div data-ix="scroll-1" class="why-mobile">
-					<h4 class="table-element-h4">Поможем сформулировать ценностное предложение работодателя</h4>
-					<p class="p">Это называется Employee Value Proposition (EVP). Это смысловое ядро эйчаркетинга: чем вы отличаетесь от других работодателей на рынке, почему и в каких случаях нужно идти работать к вам. Что именно человек получит в обмен на свои навыки.</p>
+					<h4 class="table-element-h4">Поможем сформулировать EVP</h4>
+					<p class="p">Employee Value Proposition (EVP), или ценностное предложение работодателя — это смысловое ядро эйчаркетинга.<br/>То, чем вы отличаетесь от других работодателей на рынке, почему и в каких случаях нужно идти работать к вам. Что именно человек получит в обмен на свои навыки.</p>
 					<h4 class="table-element-h4">Настроим процесс участия во внешних мероприятиях</h4>
 					<p class="p">Сегодня существуют разные митапы и конференции, на которых можно и нужно рассказывать компании. Где-то в качестве участника, где-то докладчика, где-то партнёра. А иногда нужно организовать своё собственное тематическое мероприятие, которое станет центром притяжения для сообщества. Мы помогаем привязать планы по внешним мероприятиям к вашим целям и экспертизе. А ещё помогаем использовать лучшие практики подготовки. </p>
 				</div>
@@ -197,19 +196,19 @@
 	</div-->
 
 	<div class="who">
+		<h1 data-ix="scroll-1" class="h3 spec">Кто эти граждане?</h1>		
 		<div id="who" class="dima-block">
-			<h1 data-ix="scroll-1" class="h3 spec">Кто эти граждане?</h1>
 			<div class="info-box">
 				<a target="_blank" href="https://www.facebook.com/aleksey.dolgushev" class="round-link w-inline-block"><img src="https://mrmixsun.github.io/agency/dist/alyoshka.png" data-ix="scroll-1" srcset="https://mrmixsun.github.io/agency/dist/alyoshka.png 500w, https://mrmixsun.github.io/agency/dist/alyoshka.png 930w" sizes="(max-width: 479px) 80vw, (max-width: 767px) 70vw, (max-width: 991px) 320px, 410px"/></a>
 				<h4 data-ix="scroll-1" class="h3 _2">Алексей Долгушев</h4>
 				<!--p data-ix="scroll-1" class="caps">стратегия и планирование</p-->
-				<p data-ix="scroll-1" class="bio-txt">Программировал машинное зрение, делал разный маркетинг, управлял проектами и продуктами, организовывал CodeFest. Развивает локальные IT-сообщества в России.</p>
+				<p data-ix="scroll-1" class="bio-txt">Программировал машинное зрение, делал разный маркетинг, управлял проектами и продуктами, организовывал CodeFest. Развивает локальные&nbsp;IT-сообщества в России.</p>
 			</div>
 			<div class="info-box">
 				<a target="_blank" href="https://www.facebook.com/mihail.storozhilov" class="round-link w-inline-block"><img src="https://mrmixsun.github.io/agency/dist/mishanya.png" data-ix="scroll-1" srcset="https://mrmixsun.github.io/agency/dist/mishanya.png 500w, https://mrmixsun.github.io/agency/dist/mishanya.png 930w" sizes="(max-width: 479px) 80vw, (max-width: 767px) 70vw, (max-width: 991px) 320px, 410px"/></a>
 				<h4 data-ix="scroll-1" class="h3 _2">Михаил Сторожилов</h4>
 				<!--p data-ix="scroll-1" class="caps">тактика и реализация</p-->
-				<p data-ix="scroll-1" class="bio-txt">4 года занимался HR-маркетингом в 2ГИС. Организовывал Devday, CodeFest, FrontFest и&nbsp;конференцию Груша. Строит дом и воспитывает двух дочерей.</p>
+				<p data-ix="scroll-1" class="bio-txt">Был фронтендером, PM, 4 года занимался HR-маркетингом в 2ГИС. Организовывал Devday, CodeFest, FrontFest и&nbsp;конференцию Груша. Говорит и показывает.</p>
 			</div>
 		</div>
 	</div>
