--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<p data-ix="appear-2" class="simple-text">Сегодня для найма компаниям нужен маркетинг в области HR и поддержка этого маркетинга со стороны сотрудников. Это то, чем мы занимаемся.</p> 
 				</div>
 			</div>		
-			<div data-ix="appear-4" class="top-box" style="margin-bottom: 40px;">
+			<div data-ix="appear-4" class="top-box" style="margin-bottom: 40px; margin-top: -40px;">
 				<div class="fn1">
 					<div data-ix="circle-scale" class="round w-clearfix">
 						<div class="count">1</div>
@@ -77,13 +77,13 @@
 				<div data-ix="scroll-1" class="why-mobile">
 					<h4 class="table-element-h4">Поможем сформулировать EVP</h4>
 					<p class="p">Employee Value Proposition (EVP), или ценностное предложение работодателя — это смысловое ядро эйчаркетинга.<br/>То, чем вы отличаетесь от других работодателей на рынке, почему и в каких случаях нужно идти работать к вам. Что именно человек получит в обмен на свои навыки.</p>
-					<h4 class="table-element-h4">Настроим процесс участия во внешних мероприятиях</h4>
-					<p class="p">Сегодня существуют разные митапы и конференции, на которых можно и нужно рассказывать компании. Где-то в качестве участника, где-то докладчика, где-то партнёра. А иногда нужно организовать своё собственное тематическое мероприятие, которое станет центром притяжения для сообщества. Мы помогаем привязать планы по внешним мероприятиям к вашим целям и экспертизе. А ещё помогаем использовать лучшие практики подготовки. </p>
+					<h4 class="table-element-h4" style="margin-top: 30px;">Настроим процесс участия во внешних мероприятиях</h4>
+					<p class="p">Сегодня существуют разные митапы и конференции, на которых можно и нужно рассказывать о компании. Где-то в качестве участника, где-то докладчика, где-то партнёра. А иногда нужно организовать своё собственное тематическое мероприятие, которое станет центром притяжения для сообщества. Мы помогаем привязать планы по внешним мероприятиям к вашим целям и экспертизе. А ещё помогаем использовать лучшие практики подготовки.</p>
 				</div>
 				<div data-ix="scroll-2" class="why-mobile w-clearfix">
 					<h4 class="table-element-h4">Скорректируем контент-план</h4>
 					<p class="p">Статьи для внешних ресурсов, выступления на внешних мероприятиях. Мы показываем, откуда брать истории и как их преподносить с максимальным эффектом. Делать это часто и с пользой для аудитории, и при этом закладывать в каждую историю порцию EVP. А ещё — что писать в точках входа, на сайте и в описаниях вакансий.</p>
-					<h4 class="table-element-h4">Запустим внутренние мероприятия</h4>
+					<h4 class="table-element-h4" style="margin-top: 30px;">Запустим внутренние мероприятия</h4>
 					<p class="p">Книжные клубы, питчинг бизнес-идей от инженеров, хакатоны. Мы помогаем запустить внутри компании мероприятия, которые помогут транслировать ценности компании. А ещё вовлекать людей во внутренние инициативы. Например, в эйчаркетинг.</p>
 				</div>			
 			</div>
