--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		</div>
 	</section>
 
-	<section id="why-section" class="why-section" style="padding-top: 100px;">
+	<!--section id="why-section" class="why-section" style="padding-top: 100px;">
 		<div class="why-block">
 			<div class="h3-wrapper">
 				<h3 data-ix="scroll-1" class="h3">FAQ</h3>
@@ -104,7 +104,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section-->
 
 	<!--section id="what" class="how-it-works">
 		<div class="row">
