--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 			<div class="top-box">
 				<div class="top-wrapper" style="max-width: 90%;">
 					<h1 id="h1" data-ix="appear-1" class="h1 right" style="font-family: 'Montserrat', sans-serif; font-weight: 700;">Помогаем запустить и&nbsp;наладить HR-маркетинг</h1>
-					<p data-ix="appear-2" class="simple-text" style="margin-top:40px;">Раньше вам достаточно было иметь в компании сильную экспертизу, интересные проекты и базовые точки входа (сайт, вакансии на внешних площадках). И люди шли к вам работать.</p> 
-					<p data-ix="appear-2" class="simple-text">Сейчас приходится заниматься активным хантингом. Время закрытия вакансии – растёт. Запросы и зарплаты кандидатов – растут. А вот уровень кандидатов растёт не в каждом случае. Непонятно, где искать классных специалистов. Классные специалисты не ищут работу.</p> 
+					<p data-ix="appear-2" class="simple-text" style="margin-top:40px;">C наймом в IT всё непросто. Время закрытия вакансии – растёт. Запросы и зарплаты кандидатов – растут. А вот уровень кандидатов растёт не в каждом случае. Непонятно, где искать классных специалистов. Классные специалисты не ищут работу.</p> 
 					<p data-ix="appear-2" class="simple-text">Сегодня для найма компаниям нужен маркетинг в области HR и поддержка этого маркетинга со стороны сотрудников. Это то, чем мы занимаемся.</p> 
 				</div>
 			</div>		
@@ -62,7 +61,7 @@
 			</div>
 			<div class="top-box">
 				<div class="top-wrapper" style="max-width: 90%;"> 
-					<p data-ix="appear-2" class="simple-text">Для этой деятельности есть разные названия. Техно-маркетинг, техно-пиар, Developer Relations. Нам нравится вымышленное слово “эйчаркетинг” – HRketing. Human Relations & Marketing. Или Human-Related Marketing. Про людей, взаимоотношения и маркетинг. В такой последовательности.</p> 
+					<p data-ix="appear-2" class="simple-text">Для этой деятельности есть разные названия. Техно-маркетинг, техно-пиар, Developer Relations. Нам нравится вымышленное слово “<b>эйчаркетинг</b>” – HRketing.<br/>Human Relations & Marketing. Или Human-Related Marketing. Про людей, взаимоотношения и маркетинг. В такой последовательности.</p> 
 				</div>
 			</div>							
 		</div>
@@ -76,15 +75,15 @@
 			<div class="cards-block">
 				<div data-ix="scroll-1" class="why-mobile">
 					<h4 class="table-element-h4">Поможем сформулировать EVP</h4>
-					<p class="p">Employee Value Proposition (EVP), или ценностное предложение работодателя — это смысловое ядро эйчаркетинга.<br/>То, чем вы отличаетесь от других работодателей на рынке, почему и в каких случаях нужно идти работать к вам. Что именно человек получит в обмен на свои навыки.</p>
+					<p class="p">Employee Value Proposition (EVP), или ценностное предложение работодателя — это смысловое ядро эйчаркетинга. То, чем вы отличаетесь от других работодателей <s>на рынке</s>, почему и в каких случаях нужно идти работать к вам. EVP помогает сформировать у людей правильное впечатление о компании. </p>
 					<h4 class="table-element-h4" style="margin-top: 30px;">Настроим процесс участия во внешних мероприятиях</h4>
-					<p class="p">Сегодня существуют разные митапы и конференции, на которых можно и нужно рассказывать о компании. Где-то в качестве участника, где-то докладчика, где-то партнёра. А иногда нужно организовать своё собственное тематическое мероприятие, которое станет центром притяжения для сообщества. Мы помогаем привязать планы по внешним мероприятиям к вашим целям и экспертизе. А ещё помогаем использовать лучшие практики подготовки.</p>
+					<p class="p">Сегодня существуют разные митапы и конференции, на которых можно и нужно рассказывать компании. Где-то в качестве участника, где-то докладчика, где-то партнёра. Иногда нужно организовать своё собственное тематическое мероприятие, которое станет центром притяжения для сообщества. Мы помогаем привязать планы по внешним мероприятиям к вашим целям, экспертизе и лучшим практикам индустрии. </p>
 				</div>
 				<div data-ix="scroll-2" class="why-mobile w-clearfix">
 					<h4 class="table-element-h4">Скорректируем контент-план</h4>
-					<p class="p">Статьи для внешних ресурсов, выступления на внешних мероприятиях. Мы показываем, откуда брать истории и как их преподносить с максимальным эффектом. Делать это часто и с пользой для аудитории, и при этом закладывать в каждую историю порцию EVP. А ещё — что писать в точках входа, на сайте и в описаниях вакансий.</p>
+					<p class="p">Статьи для внешних ресурсов, выступления на внешних мероприятиях. Мы показываем, откуда брать истории и как их преподносить с максимальным эффектом. Делать это часто и с пользой для аудитории и при этом закладывать в каждую историю порцию EVP. Писать правильные вещи в точках входа, на сайте и в описаниях вакансий.</p>
 					<h4 class="table-element-h4" style="margin-top: 30px;">Запустим внутренние мероприятия</h4>
-					<p class="p">Книжные клубы, питчинг бизнес-идей от инженеров, хакатоны. Мы помогаем запустить внутри компании мероприятия, которые помогут транслировать ценности компании. А ещё вовлекать людей во внутренние инициативы. Например, в эйчаркетинг.</p>
+					<p class="p">Книжные клубы, питчинг бизнес-идей от инженеров, хакатоны. Мы помогаем запустить внутри компании мероприятия, которые помогут транслировать ценности компании и вовлекать людей во внутренние инициативы. Например, в эйчаркетинг. </p>
 				</div>			
 			</div>
 		</div>
