--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<div data-ix="circle-scale" class="round w-clearfix">
 						<div class="count">1</div>
 					</div>
-				<p class="utp-feature-txt">Разрабатываем стратегию и запускаем кампании для найма</p>
+				<p class="utp-feature-txt">Разрабатываем стратегию HR-маркетинга и запускаем кампании для найма</p>
 				</div>
 				<div class="fn1">
 					<div data-ix="circle-scale" class="round w-clearfix">
@@ -75,7 +75,7 @@
 			<div class="cards-block">
 				<div data-ix="scroll-1" class="why-mobile">
 					<h4 class="table-element-h4">Поможем сформулировать EVP</h4>
-					<p class="p">Employee Value Proposition (EVP), или ценностное предложение работодателя — это смысловое ядро эйчаркетинга. То, чем вы отличаетесь от других работодателей <s>на рынке</s>, почему и в каких случаях нужно идти работать к вам. EVP помогает сформировать у людей правильное впечатление о компании. </p>
+					<p class="p">Employee Value Proposition (EVP), или ценностное предложение работодателя — это смысловое ядро эйчаркетинга. То, чем вы отличаетесь от других работодателей, почему и в каких случаях нужно идти работать к вам. EVP помогает сформировать у людей правильное впечатление о компании. </p>
 					<h4 class="table-element-h4" style="margin-top: 30px;">Настроим процесс участия во внешних мероприятиях</h4>
 					<p class="p">Сегодня существуют разные митапы и конференции, на которых можно и нужно рассказывать компании. Где-то в качестве участника, где-то докладчика, где-то партнёра. Иногда нужно организовать своё собственное тематическое мероприятие, которое станет центром притяжения для сообщества. Мы помогаем привязать планы по внешним мероприятиям к вашим целям, экспертизе и лучшим практикам индустрии. </p>
 				</div>
