--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	<meta content="summary" name="twitter:card"/>
 	<meta content="Долгушев и Сторожилов — агентство HR-маркетинга" property="og:title"/>
 	<meta content="Помогаем запустить и наладить HR-маркетинг. Поможем нанимать эффективнее и проще." property="og:description"/>
-	<meta content="https://mrmixsun.github.io/agency/dist/opengraph.jpg" property="og:image"/>
+	<meta content="https://hrmagency.ru/dist/opengraph.jpg" property="og:image"/>
 	<meta content="width=device-width, initial-scale=1" name="viewport"/>
 	<!-- мета и опенграф ↑ -->
 
-	<link href="https://mrmixsun.github.io/agency/dist/style.css" rel="stylesheet" type="text/css"/>	
+	<link href="https://hrmagency.ru/dist/style.css" rel="stylesheet" type="text/css"/>	
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700|Open+Sans:300,400,600&amp;subset=cyrillic-ext" rel="stylesheet">
 	<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
-	<link href="https://mrmixsun.github.io/agency/dist/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+	<link href="https://hrmagency.ru/dist/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 	<!--link href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.1/remodal.min.css" rel="stylesheet" type="text/css">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.1.1/remodal-default-theme.min.css" rel="stylesheet" type="text/css">
 	<script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script-->
@@ -198,13 +198,13 @@
 		<h1 data-ix="scroll-1" class="h3 spec">Кто эти граждане?</h1>		
 		<div id="who" class="dima-block">
 			<div class="info-box">
-				<a target="_blank" href="https://www.facebook.com/aleksey.dolgushev" class="round-link w-inline-block"><img src="https://mrmixsun.github.io/agency/dist/alyoshka.png" data-ix="scroll-1" srcset="https://mrmixsun.github.io/agency/dist/alyoshka.png 500w, https://mrmixsun.github.io/agency/dist/alyoshka.png 930w" sizes="(max-width: 479px) 80vw, (max-width: 767px) 70vw, (max-width: 991px) 320px, 410px"/></a>
+				<a target="_blank" href="https://www.facebook.com/aleksey.dolgushev" class="round-link w-inline-block"><img src="https://hrmagency.ru/dist/alyoshka.png" data-ix="scroll-1" srcset="https://hrmagency.ru/dist/alyoshka.png 500w, https://hrmagency.ru/dist/alyoshka.png 930w" sizes="(max-width: 479px) 80vw, (max-width: 767px) 70vw, (max-width: 991px) 320px, 410px"/></a>
 				<h4 data-ix="scroll-1" class="h3 _2">Алексей Долгушев</h4>
 				<!--p data-ix="scroll-1" class="caps">стратегия и планирование</p-->
 				<p data-ix="scroll-1" class="bio-txt">Программировал машинное зрение, делал разный маркетинг, управлял проектами и продуктами, организовывал CodeFest. Развивает локальные&nbsp;IT-сообщества в России.</p>
 			</div>
 			<div class="info-box">
-				<a target="_blank" href="https://www.facebook.com/mihail.storozhilov" class="round-link w-inline-block"><img src="https://mrmixsun.github.io/agency/dist/mishanya.png" data-ix="scroll-1" srcset="https://mrmixsun.github.io/agency/dist/mishanya.png 500w, https://mrmixsun.github.io/agency/dist/mishanya.png 930w" sizes="(max-width: 479px) 80vw, (max-width: 767px) 70vw, (max-width: 991px) 320px, 410px"/></a>
+				<a target="_blank" href="https://www.facebook.com/mihail.storozhilov" class="round-link w-inline-block"><img src="https://hrmagency.ru/dist/mishanya.png" data-ix="scroll-1" srcset="https://hrmagency.ru/dist/mishanya.png 500w, https://hrmagency.ru/dist/mishanya.png 930w" sizes="(max-width: 479px) 80vw, (max-width: 767px) 70vw, (max-width: 991px) 320px, 410px"/></a>
 				<h4 data-ix="scroll-1" class="h3 _2">Михаил Сторожилов</h4>
 				<!--p data-ix="scroll-1" class="caps">тактика и реализация</p-->
 				<p data-ix="scroll-1" class="bio-txt">Был фронтендером, PM, 4 года занимался HR-маркетингом в 2ГИС. Организовывал Devday, CodeFest, FrontFest и&nbsp;конференцию Груша. Говорит и показывает.</p>
@@ -237,13 +237,13 @@
 				</a>
 			</div>
 			<div data-ix="price-3" class="smi-box">
-				<a href="http://medium.com/@outmarket" target="_blank" class="smi-img medium w-inline-block">
+				<a href="https://medium.com/@outmarket" target="_blank" class="smi-img medium w-inline-block">
 					<img src="https://uploads-ssl.webflow.com/5857d8852e0823df044ad1d4/5a33b93a8f4b940001463ddf_1_J-PcIDrkewUmwrTZuJIIJA.png" width="200"/>
 				</a>
 				<div class="client-text w-richtext">
 					<p>Наш блог о том, как делать хорошие проекты и пилить для них годный маркетинг.</p>
 				</div>
-				<a href="http://medium.com/@outmarket" target="_blank" class="client-link mdm w-inline-block">
+				<a href="https://medium.com/@outmarket" target="_blank" class="client-link mdm w-inline-block">
 					<div>Читайте наш блог</div>
 				</a>
 			</div>
