--- a/index.html
+++ b/index.html
@@ -327,26 +327,26 @@
 		<a href="https://telegram.me/mrmixsun" data-ix="button-scroll" target="_blank" class="telegram-button w-button">Напишите в Телеграм</a>
 	</section-->
 
-	<!--div class="footer-section">
+	<div class="footer-section">
 		<div class="footer-block">
 			<div class="footer-link-wrapper">
-				<a href="tel:+7915470-10-28" data-ix="scroll-1" class="phone-link">+7 915 470-10-28</a>
+				<a href="tel:+7923195-45-10" data-ix="scroll-1" class="phone-link">+7 923 195-45-10</a>
 			</div>
 			<div data-ix="scroll-1" class="footer-link-wrapper">
-				<a href="mailto:hi@outmarketing.ru?subject=%D0%9F%D0%B8%D1%88%D1%83%20%D0%B2%D0%B0%D0%BC%20%D1%81%20%D1%81%D0%B0%D0%B9%D1%82%D0%B0!" class="phone-link">hi@outmarketing.ru</a>
-				<a href="mailto:hi@outmarketing.ru?subject=%D0%9F%D0%B8%D1%88%D1%83%20%D0%B2%D0%B0%D0%BC%20%D1%81%20%D1%81%D0%B0%D0%B9%D1%82%D0%B0!" class="link">Написать письмо</a>
+				<a href="mailto:hi@hrmagency.ru?subject=%D0%9F%D0%B8%D1%88%D1%83%20%D0%B2%D0%B0%D0%BC%20%D1%81%20%D1%81%D0%B0%D0%B9%D1%82%D0%B0!" class="phone-link">hi@hrmagency.ru</a>
+				<a href="mailto:hi@hrmagency.ru?subject=%D0%9F%D0%B8%D1%88%D1%83%20%D0%B2%D0%B0%D0%BC%20%D1%81%20%D1%81%D0%B0%D0%B9%D1%82%D0%B0!" class="link">Написать письмо</a>
 			</div>
 			<div data-ix="scroll-1" class="outmar">
 				<div class="footer-link-wrapper">
-					<div class="out">Аутмаркетинг<span class="red">*</span> 2017</div>
-					<a href="#" data-remodal-target="modal" class="link">Наши реквизиты</a>
+					<div class="out">Агентство Долгушева и Сторожилова<span class="red">*</span> 2017</div>
+					<!--a href="#" data-remodal-target="modal" class="link">Наши реквизиты</a-->
 				</div>
-				<a target="_blank" href="https://drive.google.com/file/d/0B74bKdCMwC1Pc0U3dGZKWWpnSVE/view?usp=sharing" class="link-copy">Политика конфиденциальности</a>
+				<!--a target="_blank" href="https://drive.google.com/file/d/0B74bKdCMwC1Pc0U3dGZKWWpnSVE/view?usp=sharing" class="link-copy">Политика конфиденциальности</a-->
 			</div>
 		</div>
 	</div>
 
-	<div data-remodal-id="modal" class="table-section remodal">
+	<!--div data-remodal-id="modal" class="table-section remodal">
 		<a href="#" data-remodal-action="close" class="close">×</a>
 		<div class="table">
 			<h4 class="table-element-h4">ИП Шаяхов Антон Гельсович</h4>
