--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 			</div>
 			<div data-ix="scroll-1" class="outmar">
 				<div class="footer-link-wrapper">
-					<div class="out">Агентство Долгушева и Сторожилова<span class="red">*</span> 2017</div>
+					<div class="out">Агентство Долгушева и Сторожилова</div>
 					<!--a href="#" data-remodal-target="modal" class="link">Наши реквизиты</a-->
 				</div>
 				<!--a target="_blank" href="https://drive.google.com/file/d/0B74bKdCMwC1Pc0U3dGZKWWpnSVE/view?usp=sharing" class="link-copy">Политика конфиденциальности</a-->
