Add link to Medium

--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
 					<p class="p">Книжные клубы, питчинг бизнес-идей от инженеров, хакатоны. Мы помогаем запустить внутри компании мероприятия, которые помогут транслировать ценности компании и вовлекать людей во внутренние инициативы. Например, в эйчаркетинг. </p>
 				</div>			
 			</div>
+			<div class="h3-wrapper" style="margin-bottom:0px !important;">
+				<h3 data-ix="scroll-1" style="margin: 0px; font-size: 24px;">Подробнее можно почитать в нашем <a href="https://medium.com/@hrm_agency">блоге</a></h3>
+			</div>
 		</div>
 	</section>
 
