edit text for medium

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				</div>			
 			</div>
 			<div class="h3-wrapper" style="margin-bottom:0px !important;">
-				<h3 data-ix="scroll-1" style="margin: 0px; font-size: 24px;">Подробнее можно почитать в нашем <a href="https://medium.com/@hrm_agency" target="_blank" style="color: #f0f0f0; font-weight: bold;">блоге</a></h3>
+				<h3 data-ix="scroll-1" style="margin: 0px; font-size: 24px;">Как мы это делаем — можно почитать в нашем <a href="https://medium.com/@hrm_agency" target="_blank" style="color: #f0f0f0; font-weight: bold; text-decoration: underline;">блоге</a></h3>
 			</div>
 		</div>
 	</section>
